build: clean up directory after build corrected typos and added a few minor precisions in running and kernel. running: added mcresplot figure comp_removed: added share lib list
git-svn-id: https://svn.mccode.org/svn/McStasTeX@20 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/instrum.tex
+++ b/trunk/instrum.tex
@@ -15,6 +15,7 @@ test instrument: the instrument to test the component
 %is listed in Appendix~\ref{instcode}.
 These instrument files are included in the \MCS\ distribution
 in the \verb+examples/+ directory.
+All the instrument examples there-in may be executed automatically throught the \MCS\ self-test procedure (see section~\ref{s:testing}).
 It is also our intention to extend the list of instrument examples extensively
 and perhaps publish them in a separate report.
 
