--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -144,6 +144,7 @@
 %\bibitem{TAS1paper} Our paper on the TAS1 test results
 %\end{thebibliography}
 
+\addcontentsline{toc}{chapter}{\protect\numberline{}{Index and keywords}}
 \printindex
 \include{datablad}
 
