--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -2,6 +2,7 @@
 
 \chapter{The component library}
 \label{s:components}
+\index{Library!Components|textbf}
 
 This chapter has been removed from the manual and will instead be published 
 in a separate manual describing the McStas components. The McStas component manual will be edited by the McStas authors and it will include contributions from users writing components. Until the \MCS\ component manual is published we refer to the McStas web-page~\cite{mcstas_webpage} where all components are documented using the McDoc system or to previous manual for 
@@ -10,7 +11,24 @@ release 1.4.
 \section{A short overview of the \MCS\ component library}
 \label{s:comp-overview}
 
-This section gives a quick overview of available \MCS\ components provided with the distribution, in the \verb+MCSTAS+ library. \index{Environment variable!MCSTAS} \index{Library!Components}
+This section gives a quick overview of available \MCS\ components provided with the distribution, in the \verb+MCSTAS+ library. All of them are thought to be reliable, eventhough no absolute guaranty may be given concerning their accuracy.\index{Environment variable!MCSTAS}
+
+The \verb+contrib+ directory of the library contains components that were given by \MCS\ users, but are not validated yet. \index{Library!Components!contrib}
+
+Additionally the \verb+obsolete+ directory of the library gathers components that were renamed, or considered to be outdated. Anyway, they still all work as before.
+\index{Library!Components!obsolete}
+
+The \verb+mcdoc+ front-end (section~\ref{s:mcdoc-run}) enables to display both the 
+catalog of the \MCS\ library, e.g using: \index{Tools!mcdoc}
+\begin{quote}
+  \verb|mcdoc --show|
+\end{quote}
+as well as the documentation of specific components, e.g with:
+\begin{quote}
+  \verb|mcdoc --text| {\it name}
+  \verb|mcdoc| {\it file.comp}
+\end{quote}
+The first line will search for all components matching the {\it name}, and display their help section as text, where as the second example will display the help corresponding to the {\it file.comp} component, using your BROWSER\index{Environment variable!BROWSER} setting, or as text if unset.
 
 \begin{table}
   \begin{center}
@@ -20,7 +38,7 @@ This section gives a quick overview of available \MCS\ components provided with 
        MCSTAS/sources & Description \\
        \hline
 Adapt\_check & Optimization specifier for the Source\_adapt component. \\
-ESS\_moderator\_long & parametrised pulsed source for modelling ESS long pulses. \\
+ESS\_moderator\_long & Parametrised pulsed source for modelling ESS long pulses. \\
 ESS\_moderator\_short & A parametrised pulsed source for modelling ESS short pulses. \\
 Moderator  & A simple pulsed source for time-of-flight. \\
 Monitor\_Optimizer &  To be used after the Source\_Optimizer component. \\
@@ -45,6 +63,7 @@ Virtual\_output &  Detector-like component that writes neutron state (for Virtua
     \end{tabular}
     \caption{Source components of the \MCS\ library.}
     \label{t:comp-sources}
+    \index{Library!Components!sources}
     }
   \end{center}
 \end{table}
@@ -83,7 +102,7 @@ Arm                &  Arm/optical bench \\
  Guide\_wavy        &   Neutron guide with
                       gaussian waviness. \\
 
- Mirror               Single mirror plate. \\
+ Mirror             &  Single mirror plate. \\
 
                       
  Monochromator\_curved & Double bent multiple crystal
@@ -107,6 +126,7 @@ Arm                &  Arm/optical bench \\
     \end{tabular}
     \caption{Optics components of the \MCS\ library.}
     \label{t:comp-optics}
+    \index{Library!Components!optics}
     }
   \end{center}
 \end{table}
@@ -132,6 +152,7 @@ Arm                &  Arm/optical bench \\
     \end{tabular}
     \caption{Sample components of the \MCS\ library.}
     \label{t:comp-samples}
+    \index{Library!Components!samples}
     }
   \end{center}
 \end{table}
@@ -201,6 +222,7 @@ TOFlog\_mon      &    Rectangular Time-of-flight
     \end{tabular}
     \caption{Monitor components of the \MCS\ library.}
     \label{t:comp-monitors}
+    \index{Library!Components!monitors}
     }
   \end{center}
 \end{table}
@@ -224,6 +246,7 @@ TOFlog\_mon      &    Rectangular Time-of-flight
     \end{tabular}
     \caption{Miscellaneous components of the \MCS\ library.}
     \label{t:comp-misc}
+    \index{Library!Components!misc}
     }
   \end{center}
 \end{table}
@@ -246,7 +269,7 @@ TOFlog\_mon      &    Rectangular Time-of-flight
                         graphite filter
                         (analytical model). \\
  Filter\_powder   &       Box-shaped powder
-                        filter based on Single\_crystal. \\
+                        filter based on Single\_crystal (unstable). \\
  Guide\_honeycomb & Neutron guide
                         with gravity and
                         honeycomb geometry. Can be
@@ -262,7 +285,34 @@ TOFlog\_mon      &    Rectangular Time-of-flight
       \hline
     \end{tabular}
     \caption{Contributed components of the \MCS\ library.}
+    \index{Library!Components!contrib}
     \label{t:comp-contrib}
+    }
+  \end{center}
+\end{table}
+
+\begin{table}
+  \begin{center}
+    {\let\my=\\
+    \begin{tabular}{|p{0.24\textwidth}|p{0.7\textwidth}|}
+      \hline
+       MCSTAS/share & Description \\ 
+       \hline
+       adapt\_tree-lib  & Handles a simulation optimisation space for adatative sampling.
+                          Used by the Source\_adapt component. \\
+       {\bf mcstas-r}      &   Main Run-time library (always included). \\
+       monitor\_nd-lib & Handles multiple monitor types. 
+                        Used by Monitor\_nD, Res\_monitor, \ldots \\
+       read\_table-lib  & Enables to read a data table (text/binary) to be used within
+                          an instrument or a component. \\
+       vitess-lib &     Enables to read/write Vitess event binary files. 
+                        Used by Vitess\_input and Vitess\_output \\             
+      \hline
+    \end{tabular}
+    \caption{Shared libraries of the \MCS\ library. See Appendix~\ref{c:kernelcalls} for details.}
+    \label{t:comp-share}
+    \index{Library!Components!share}
+    \index{Library!Run-time}
     }
   \end{center}
 \end{table}
