--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -96,7 +96,7 @@ reaching the present position without being absorbed or scattered away from
 the instrument. Alternatively, one may regard a ray of neutrons and $p$ is
 the fraction of neutrons following the considered path.
 
-\section{Syntactical conventions}
+\section{Syntaxical conventions}
 \label{s:syntax}
 
 Comments follow the normal C syntax ``\verb+/* ... */+''. C++ style
@@ -126,17 +126,17 @@ as C variable names. The list of these reserved keywords is shown in table~\ref{
       \hline
       \texttt{ABSOLUTE} & I & Indicates that the AT and ROTATED keywords are in the absolute coordinate system. \\
       \texttt{AT} & I & Indicates the position of a component in an instrument definition. \\
-      \texttt{DECLARE} & I,C & Declare C internal instrument or component variables. \\
-      \texttt{DEFINE} & I,C & Start an instrument or component definition. \\
+      \texttt{DECLARE} & I,C & Declares C internal instrument or component variables. \\
+      \texttt{DEFINE} & I,C & Starts an instrument or component definition. \\
       \texttt{- INSTRUMENT} & & \\
       \texttt{- COMPONENT} & & \\
       \texttt{DEFINITION} & C & Defines component parameters that are constants (like C \#define). \\
       \texttt{END} & I,C & Ends the instrument or component definition. \\
       \texttt{EXTEND} & I & Extends the TRACE section of a component in an instrument definition. \\
-      \texttt{FINALLY} & I,C & Embedded C code to execute when simulation ends (also executes the SAVE section). \\
+      \texttt{FINALLY} & I,C & Embeds C code to execute when simulation ends (also executes the SAVE section). \\
       \texttt{GROUP} & I & Defines an exclusive group of components. \\
-      \texttt{\%include} & I,C & Import an instrument part, a component or a piece of C code (when within embedded C). \\
-      \texttt{INITIALIZE} & I,C & Embedded C code to be executed when starting. \\
+      \texttt{\%include} & I,C & Imports an instrument part, a component or a piece of C code (when within embedded C). \\
+      \texttt{INITIALIZE} & I,C & Embeds C code to be executed when starting. \\
       \texttt{MCDISPLAY} & C & Embedded C code to display a geometric  representation of a component. \\
       \texttt{OUTPUT} & C & Defines internal variables to be public and protected symbols (usually all those of DECLARE).\\
       \texttt{PARAMETERS} & C & Defines a class of component parameter. \\
@@ -145,9 +145,9 @@ as C variable names. The list of these reserved keywords is shown in table~\ref{
       \texttt{ROTATED} & I & Indicates the orientation of a component in an instrument definition. \\
       \texttt{SAVE} & I,C & Embedded C code to execute when saving data. \\
       \texttt{SETTING} & C & Defines component parameters that are variables(double, int, char*). \\
-      \texttt{SHARE} & C & Declare global functions and variables to be used by all components. \\
+      \texttt{SHARE} & C & Declares global functions and variables to be used by all components. \\
       \texttt{STATE} & C & Defines neutron state coordinates. \\
-      \texttt{TRACE} & I,C & List of component or embedded C code to execute during simulation. \\
+      \texttt{TRACE} & I,C & Lists the components or embedded C code to execute during simulation. \\
       \hline
     \end{tabular}
     \caption{Reserved \MCS\ keywords. 
@@ -344,7 +344,7 @@ Indeed, many components of the \MCS\ library \index{Library!Components} start
 by propagating the neutron event to the begining of the component itself.
 Anyway, when the corresponding propagation time is found to be negative
 ({\it i.e.} the neutron is already \emph{after} the component, and has thus
-passed the 'active' position), the neutron event is ABSORBed. Such situations
+passed the 'active' position), the neutron event is ABSORBed, resulting in a zero intensity and event counts after a given position. Such situations
 may arise e.g. when positioning some components not one after the other (nested, in parallel, or overlapping), for
 instance in a multiple crystal monochromator (they are then side by side). One
 would then like the neutron to interact with \emph{one of} the components and
@@ -355,7 +355,7 @@ arrangements, groups are defined by appending the \texttt{GROUP} modifier
 \end{quote}
 to all involved component declarations. \index{Keyword!GROUP}
 All components of the same named group are tested one after the other, until one of them interacts (uses the SCATTER macro \index{Library!Run-time!SCATTER}). The selected component acts on the neutron, and the rest of the group is skipped. Such groups are thus exclusive (only one of the elements is active).
-If no component of the group could intercept the neutron, it is ABSORBed.
+If no component of the group could intercept the neutron, it is ABSORBed. If you wish not to absorb these neutrons, you may end each group by a large monitor, which will eventually catch neutrons that wrere not caught by previous components of the group.
 
 It is sometimes desirable to slighlty modify an existing component of the \MCS\ library. One would usually make a copy of the component, and extend the code of its \texttt{TRACE} section. \MCS\ provides an easy way to change the behaviour of existing components in an instrument definition without duplicating files, using the \texttt{EXTEND} modifier \index{Keyword!EXTEND}
 \begin{quote}
@@ -462,8 +462,8 @@ component.
 \index{Keyword!SETTING PARAMETERS}
 This declares the definition and setting parameters of the component.
 The parameters define the characteristics of the component, and can be
-accessed from the \verb+DECLARE+, \verb+INITIALIZE+, \verb+TRACE+,
-\verb+FINALLY+, and \verb+MCDISPLAY+ sections (see below), as well as in \verb+EXTEND+ sections of the instrument definition (see section~\ref{s:instrdefs}).
+accessed from the \verb+SAVE+, \verb+FINALLY+, and \verb+MCDISPLAY+ sections (see below), 
+as well as in \verb+EXTEND+ sections of the instrument definition (see section~\label{s:instrdefs}).
 \index{Parameters!Setting}
 \index{Parameters!Definition}
 
@@ -481,8 +481,8 @@ names may be used. For this reason, setting parameters should be used
 whenever possible.
 
 There are a few cases where the use of definition parameters instead of
-setting parameters makes sense. If the parameter is not numeric ({\em i.e.} a
-string for a file name, for example), a setting parameter cannot be
+setting parameters makes sense. If the parameter is not numeric, nor a character string ({\em i.e.} an
+array, for example), a setting parameter cannot be
 used. Also, because of the use of \verb+#define+, the C compiler can
 treat definition parameters as constants when the simulation is
 compiled. For example, if the array sizes of a multidetector are
@@ -660,7 +660,7 @@ parameters.
 \index{Library!Run-time!ABSORB}
 The C code may also execute the special macro \texttt{ABSORB} to indicate
 that the neutron has been absorbed in the component and the simulation of
-that neutron will be aborted. When the neutron state is changed, for
+that neutron will be aborted. When the neutron state is changed or detected, for
 instance if the component simulates multiple events (for example multiple
 reflections in a guide, or multiple scattering in a powder sample), the
 special macro \texttt{SCATTER} should be called. This does not affect the
@@ -682,12 +682,12 @@ component. \index{Library!Run-time!SCATTER}
   \hbox to 3em{}\ldots C code to execute in order to save data \ldots \\
   \verb|%}|
 \end{quote}
-This gives code that will be executed when the simulation is requested to save data, for instance when receiving a USR2 signal (on Unix systems).
+This gives code that will be executed when the simulation is requested to save data, for instance when receiving a USR2 signal (on Unix systems, see section~\ref{s:run-sim}).
 This might be used by monitors and detectors in order to write results.
 
 In order to work properly with the common output file format used in
 \MCS, all monitor/detector components should use standard macros for
-outputting data in the FINALLY section, as explained below. In the
+outputting data in the SAVE or FINALLY section, as explained below. In the
 following, we use $N = \sum_i p_i^0$ to denote the count of detected
 neutron events, $p = \sum_i p_i$ to denote the sum of the weights of
 detected neutrons, and $\textit{p2} = \sum_i p_i^2$ to denote the sum of
@@ -695,6 +695,7 @@ the squares of the weights, as explained in section~\ref{s:staterror}.
 
 \paragraph{Single detectors/monitors}
 \label{s:DETECTOR_OUT}
+\index{Library!Run-time!DETECTOR\_OUT}
 
 The results of a single detector/monitor are written using the following
 macro:
@@ -784,6 +785,8 @@ Note that for a two-dimensional detector array, the first dimension is
 along the X axis and the second dimension is along the Y axis. This
 means that element $(i_x,i_y)$ can be obtained as $p[i_x*n+i_y]$ if $p$
 is a pointer to the first element.
+
+Additionally, a \verb+DETECTOR_OUT_3D+ macro also exists for saving 3D data, and its usage is detailed in the appendix~\ref{c:kernelcalls}.
 
 \subsection{The \texttt{FINALLY} section}
 \label{s:comp-finally}
@@ -892,6 +895,7 @@ A simple example of the component \texttt{Slit} is given.
 
 \subsection{McDoc, the McStas component documentation tool}
 \label{s:mcdoc}
+\index{Tools!mcdoc}
 
 %From version 1.3, 
 McStas includes a facility called McDoc to help
@@ -907,7 +911,7 @@ actually works.
 Two forms of documentation can be generated. One
 is the component entry dialog in the \verb+mcgui+ front-end, see
 section~\ref{s:mcgui}. The other is a collection of web pages documenting
-the component, and the complete documentation for all available
+the component, handled via the \verb+mcdoc+ front-end (see section~\ref{s:mcdoc-run}), and the complete documentation for all available
 McStas components may be found at the \MCS\ webpage~\cite{mcstas_webpage}.
 
 Note that McDoc-compliant comments in the source code are no substitute
