added share section and mcdoc usage
git-svn-id: https://svn.mccode.org/svn/McStasTeX@22 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -25,7 +25,7 @@ catalog of the \MCS\ library, e.g using: \index{Tools!mcdoc}
 \end{quote}
 as well as the documentation of specific components, e.g with:
 \begin{quote}
-  \verb|mcdoc --text| {\it name}
+  \verb|mcdoc --text| {\it name} \\
   \verb|mcdoc| {\it file.comp}
 \end{quote}
 The first line will search for all components matching the {\it name}, and display their help section as text, where as the second example will display the help corresponding to the {\it file.comp} component, using your BROWSER\index{Environment variable!BROWSER} setting, or as text if unset.
