--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -1,4 +1,4 @@
-2% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
+% Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 {% Make all definitions local.
 
