updated mcdoc usage
git-svn-id: https://svn.mccode.org/svn/McStasTeX@23 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -26,9 +26,9 @@ catalog of the \MCS\ library, e.g using: \index{Tools!mcdoc}
 as well as the documentation of specific components, e.g with:
 \begin{quote}
   \verb|mcdoc --text| {\it name} \\
-  \verb|mcdoc| {\it file.comp}
+  \verb|mcdoc| {\it file.comp} --show
 \end{quote}
-The first line will search for all components matching the {\it name}, and display their help section as text, where as the second example will display the help corresponding to the {\it file.comp} component, using your BROWSER\index{Environment variable!BROWSER} setting, or as text if unset.
+The first line will search for all components matching the {\it name}, and display their help section as text, where as the second example will display the help corresponding to the {\it file.comp} component, using your BROWSER\index{Environment variable!BROWSER} setting, or as text if unset. The \verb+--help+ option will display the command help, as usual.
 
 \begin{table}
   \begin{center}
