--- a/trunk/kernelcalls.tex
+++ b/trunk/kernelcalls.tex
@@ -1,16 +1,52 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
-\chapter{Kernel calls and conversion constants}
+\chapter{Libraries and conversion constants}
 \label{c:kernelcalls}
-The \MCS\ kernel contains a number of built-in functions
-and conversion constants which are useful when constructing
-components. Here, we present a short list of these features.
+\index{Library|textbf}
+\index{Library!Shared|see{Library/Component/share}}
+\index{Library!mcstas-r|see{Library/Run-time}}
 
-\section{Kernel calls and functions}
+The \MCS\ Library contains a number of built-in functions
+and conversion constants which are useful when constructing
+components. These are stored in the \verb+share+ directory of 
+the \verb+MCSTAS+ library. \index{Library!Components!share} 
+\index{Environment variable!MCSTAS}
+
+Within these functions, the 'Run-time' part is available for all
+component/instrument descriptions. The other parts (see
+table~\ref{t:comp-share}) are dynamic, that is they are not
+pre-loaded, but only imported once when a component requests it
+using the \verb+%include+ \MCS\ keyword. For instance, within a
+component C code block, (usually SHARE or DECLARE):
+\index{Keyword!\%include}
+\begin{verbatim}
+    %include "read_table-lib"
+\end{verbatim}
+will include the 'read\_table-lib.h' file, and the 'read\_table-lib.c'
+(unless the \verb+--no-runtime+ option is used with \verb+mcstas+).
+Similarly,
+\begin{verbatim}
+    %include "read_table-lib.h"
+\end{verbatim}
+will \emph{only} include the 'read\_table-lib.h'.
+The library embedding is done only once for all components (like the
+ SHARE section). \index{Keyword!SHARE} For an example of implementation, see the Res\_monitor component.
+
+Here, we present a short list of both each of the library contents and the run-time features.
+
+\section{Run-time calls and functions}
+\label{s:calls:run-time}
+\index{Library!Run-time|textbf}
+\index{Library!mcstas-r|see{Library/Run-time}}
 Here we list a number of preprogrammed macros 
 which may ease the task of writing component and instrument definitions.
 
 \subsection{Neutron propagation}
+\index{Library!Run-time!SCATTER}
+\index{Library!Run-time!ABSORB}
+\index{Library!Run-time!PROP\_Z0}
+\index{Library!Run-time!PROP\_DT}
+\index{Library!Run-time!PROP\_GRAV\_DT}
 \begin{itemize}
 \item {\bf ABSORB}. This macro issues an order to the overall
   \MCS\ simulator to interrupt the simulation of the current neutron
@@ -18,16 +54,32 @@ which may ease the task of writing component and instrument definitions.
 \item {\bf PROP\_Z0}. Propagates the neutron to the $z=0$ plane,
   by adjusting $(x,y,z)$ and $t$. If the neutron velocity 
   points away from the $z=0$ plane, the neutron is absorbed.
+  If component is centered, in order to avoid the neutron to be propagated
+  there, use the \verb+_intersect+ functions to determine intersection time(s),
+  and then a \verb+PROP_DT+ call.
 \item {\bf PROP\_DT}$(dt)$. Propagates the neutron through the
   time interval $dt$, adjusting $(x,y,z)$ and $t$.
 \item {\bf PROP\_GRAV\_DT}$(dt,Ax,Ay,Az)$. Like {\bf PROP\_DT}, but it also
   includes gravity using the acceleration $(Ax,Ay,Az)$. In addition,
   to adjusting $(x,y,z)$ and $t$ also $(vx,vy,vz)$ is modified.
 \item {\bf SCATTER}. This macro is used to denote a scattering event
-  inside a component, see section~\ref{s:comp-trace}.
+  inside a component, see section~\ref{s:comp-trace}. It should be used e.g 
+  to indicate that a component has 'done something' (sctattered or detected).
+  This does not affect the simulation at all, and is mainly used by the 
+  \verb+MCDISPLAY+ section and the \verb+GROUP+ modifier (see~\ref{s:trace} and \ref{s:comp-mcdisplay}). See also the SCATTERED variable (below).
+  \index{Keyword!GROUP} \index{Keyword!MCDISPLAY} \index{Keyword!EXTEND}
 \end{itemize}
 
-\subsection{Meta-language extensions}
+\subsection{Coordinate and component variable retrieval}
+\index{Library!Run-time!MC\_GETPAR}
+\index{Library!Run-time!NAME\_CURRENT\_COMP}
+\index{Library!Run-time!POS\_A\_CURRENT\_COMP}
+\index{Library!Run-time!ROT\_A\_CURRENT\_COMP}
+\index{Library!Run-time!POS\_A\_COMP}
+\index{Library!Run-time!ROT\_A\_COMP}
+\index{Library!Run-time!STORE\_NEUTRON}
+\index{Library!Run-time!RESTORE\_NEUTRON}
+\index{Library!Run-time!SCATTERED}
 \begin{itemize}
 \item {\bf MC\_GETPAR}(). This may be used in the finally section of an
   instrument definition to reference the output parameters of a
@@ -35,36 +87,81 @@ which may ease the task of writing component and instrument definitions.
 \item {\bf NAME\_CURRENT\_COMP} gives the name of the current component as a string.
 \item {\bf POS\_A\_CURRENT\_COMP} gives the absolute position of the 
   current component. A component of the vector is referred to as
-  {\bf POS\_A\_CURRENT\_COMP.i} where $i$ is $x$, $y$ or $z$.
+  POS\_A\_CURRENT\_COMP.$i$ where $i$ is $x$, $y$ or $z$.
 \item {\bf ROT\_A\_CURRENT\_COMP} and 
   {\bf ROT\_R\_CURRENT\_COMP} give the orientation
   of the current component as rotation matrices
   (absolute orientation and the orientation relative to
   the previous component, respectively). A
   component of a rotation matrice is referred to as 
-  {\bf ROT\_A\_CURRENT\_COMP[m][n]}, where $m$ and
+  ROT\_A\_CURRENT\_COMP$[m][n]$, where $m$ and
   $n$ are 0, 1, or 2.
-\item {\bf POS\_A\_COMP(comp)} gives the absolute position
+\item {\bf POS\_A\_COMP}$(comp)$ gives the absolute position
   of the component with the name {\em comp}. Note that
   {\em comp} is not given as a string. A component of the
-  vector is referred to as {\bf POS\_A\_COMP(comp).i}
+  vector is referred to as POS\_A\_COMP$(comp).i$
   where $i$ is $x$, $y$ or $z$.
-\item {\bf ROT\_A\_COMP(comp)} and
-  {\bf ROT\_R\_COMP(comp)} give the orientation of the
+\item {\bf ROT\_A\_COMP}$(comp)$ and
+  {\bf ROT\_R\_COMP}$(comp)$ give the orientation of the
   component {\em comp} as rotation matrices (absolute
   orientation and the orientation relative to its
   previous component, respectively). Note that {\em comp}
   is not given as a string. A component of  a rotation
   matrice is referred to as 
-  {\bf ROT\_A\_COMP(comp)[m][n]}, where $m$ and $n$ are
+  ROT\_A\_COMP$(comp)[m][n]$, where $m$ and $n$ are
   0, 1, or 2. 
+\item {\bf INDEX\_CURRENT\_COMP} is the number (index) of the
+       current component  (1 is first component of instrument).
+\item {\bf POS\_A\_COMP\_INDEX}$(index)$ is the absolute position of
+  component $index$. \\
+  POS\_A\_COMP\_INDEX (INDEX\_CURRENT\_COMP) is the same as \\
+  POS\_A\_CURRENT\_COMP. You may use
+  POS\_A\_COMP\_INDEX \\ (INDEX\_CURRENT\_COMP+1) to make, for instance, your
+  component access the position of the next component (this is usefull for
+  automatic targeting).  A component of the vector is referred to as \\
+  POS\_A\_COMP\_INDEX$(index).i$ where $i$ is $x$, $y$ or $z$. {\bf
+  POS\_R\_COMP\_INDEX} works the same, but with relative coordinates. 
+\item {\bf STORE\_NEUTRON}$(index, x, y, z, vx, vy, vz, t$, $sx, sy,
+sz, p)$ stores the current neutron state in the trace-history table,
+in local coordinate system. $index$ is usually INDEX\_CURRENT\_COMP.
+This is automatically done when entering each component of an
+instrument.
+\item {\bf RESTORE\_NEUTRON}$(index, x, y, z, vx, vy, vz, t, sx, sy,
+sz, p)$ restores the neutron state to the one at the input of the
+component $index$. To ignore a component effect, use
+RESTORE\_NEUTRON (INDEX\_CURRENT\_COMP \\ 
+$, x, y, z, vx, vy, vz, t,
+sx, sy, sz, p$) at the end of its TRACE section, or in its EXTEND
+section. These neutron states are in the local component coordinate
+systems.
+\item {\bf SCATTERED} is a variable set to 0 when entering
+  a component, which is incremented each time a SCATTER event occurs.
+  This may be used in the \verb+EXTEND+ sections (always executed) to branch
+  action depending if the component acted or not on the current neutron.
 \item {\bf extend\_list}($n$, \&\textit{arr}, \&\textit{len},
   \textit{elemsize}). Given an array \textit{arr} with \textit{len}
   elements each of size \textit{elemsize}, make sure that the array is
   big enough to hold at least $n$ elements, by extending \textit{arr}
   and \textit{len} if necessary. Typically used when reading a list of
   numbers from a data file when the length of the file is not known in advance.
-\item {\bf mcget\_ncount}(). Returns the number of neutron histories to simulate.
+\item {\bf mcset\_ncount}$(n)$. Sets the number of neutron histories to simulate to $n$.
+\item {\bf mcget\_ncount}(). Returns the number of neutron histories to simulate (usually set by option \verb+-n+).
+\item {\bf mcget\_run\_num}(). Returns the number of neutron histories that have been simulated until now.
+\end{itemize}
+
+\subsection{Coordinate transformations}
+\begin{itemize}
+\item {\bf coords\_set}$(x,y,z)$ returns a Coord structure (like POS\_A\_CURRENT\_COMP) with $x$, $y$ and $z$ members.
+\item {\bf  coords\_get}$(P,$ \&$x$, \&$y$, \&$z)$ copies the $x$, $y$ and 
+$z$ members of the Coord structure $P$ into $x,y,z$ variables.
+\item {\bf coords\_add}$(a,b)$, {\bf coords\_sub}$(a,b)$, {\bf
+coords\_neg}$(a)$ enable to  operate on coordinates, and return the
+resulting Coord structure.
+\item {\bf rot\_set\_rotation}$(Rotation t, \phi_x, \phi_y, \phi_z)$ Get transformation for rotation first $\phi_x$ around x axis, then $\phi_y$ around y, then $\phi_z$ around z. $t$ should be a 'Rotation' ([3][3] 'double' matrix).
+\item {\bf rot\_mul}$(Rotation t1, Rotation t2, Rotation t3)$ makes $t3 = t1 . t2$.
+\item {\bf rot\_copy}$(Rotation dest, Rotation src)$ makes $dest = src$ for Rotation arrays.
+\item {\bf rot\_transpose}$(Rotation src, Rotation dst)$ makes $dest = src^t$.
+\item {\bf rot\_apply}$(Rotation t, Coords a)$ returns a Coord structure which is $t.a$
 \end{itemize}
 
 \subsection{Mathematical routines}
@@ -85,15 +182,28 @@ which may ease the task of writing component and instrument definitions.
 
 \subsection{Output from detectors}
 \begin{itemize}
-\item {\bf DETECTOR\_OUT\_0D}$()$. Used to output the results from a
+\item {\bf DETECTOR\_OUT\_0D}$(...)$. Used to output the results from a
   single detector. The name of the detector is output together
   with the simulated intensity and estimated statistical error. The
   output is produced in a format that can be read by \MCS\ front-end
   programs. See section~\ref{s:comp-finally} for details.
-\item {\bf DETECTOR\_OUT\_1D}$()$. Used to output the results from a
+\item {\bf DETECTOR\_OUT\_1D}$(...)$. Used to output the results from a
   one-dimentional detector. See section~\ref{s:comp-finally} for details.
-\item {\bf DETECTOR\_OUT\_2D}$()$. Used to output the results from a
+\item {\bf DETECTOR\_OUT\_2D}$(...)$. Used to output the results from a
   two-dimentional detector. See section~\ref{s:comp-finally} for details.
+\item {\bf DETECTOR\_OUT\_3D}$(...)$. Used to output
+  the results from a three-dimentional detector. Arguments are the same as
+  in DETECTOR\_OUT\_2D, but with the additional $z$ axis (the signal).
+  Resulting data files are treated as 2D data, but the 3rd dimension is
+  specified in the $type$ field.
+\item {\bf mcheader\_out}$(FILE *f,char *parent$,
+  $int m, int n, int p$,
+  $char *xlabel, char *ylabel$, $char *zlabel, char *title$,
+  $char *xvar, char *yvar, char *zvar$,
+  $double x1, double x2, double y1$, $ double y2, double z1, double z2$,
+  $char *filename)$ appends a header file using the current data format setting. Signification of parameters may be found in section~\ref{s:comp-finally}. Please contact the authors in case of perplexity.
+\item {\bf mcinfo\_simulation}$(FILE *f, mcformat, 
+  char *pre, char *name)$ is used to append the simulation parameters into file $f$ (see for instance the Res\_monitor component). Internal variable $mcformat$ should be used as specified. Please contact the authors in case of perplexity.
 \end{itemize}
 
 \subsection{Ray-geometry intersections}
@@ -122,15 +232,92 @@ which may ease the task of writing component and instrument definitions.
   distribution centered around 0 and with $\sigma=1$. The algorithm used to
   get the normal distribution is explained in~\cite{num_rep}, chapter~7.
 \item {\bf randpm1}(). Returns a random number distributed uniformly between -1 and 1.
-\item {\bf randvec\_target\_sphere}(\&$v_x$, \&$v_y$, \&$v_z$, \&$d\Omega$,
-  aim$_x$, aim$_y$, aim$_z$, $r_f$).
-  Generates a random vector $(v_x, v_y, v_z)$, of the same
-  length as (aim$_x$, aim$_y$, aim$_z$),
-  which is targeted at a sphere centered at (aim$_x$, aim$_y$, aim$_z$)
-  with radius $r_f$. All directions that intersect the sphere are chosen
-  with equal probability. The solid angle of the sphere as seen from the
-  position of the neutron is returned in $d\Omega$.
+\item {\bf randvec\_target\_circle}(\&$v_x$, \&$v_y$, \&$v_z$, \&$d\Omega$,
+  aim$_x$, aim$_y$, aim$_z$, $r_f$). Generates a random vector $(v_x, v_y,
+  v_z)$, of the same length as (aim$_x$, aim$_y$, aim$_z$), which is
+  targeted at a \emph{disk} centered at (aim$_x$, aim$_y$, aim$_z$) with
+  radius $r_f$ (in meters), and perpendicular to the \emph{aim} vector.. All directions
+  that intersect the sphere are chosen with equal probability. The solid
+  angle of the sphere as seen from the position of the neutron is returned
+  in $d\Omega$. This routine was previously called randvec\_target\_sphere
+  (which still works).
+\item {\bf randvec\_target\_rect}(\&$v_x$, \&$v_y$, \&$v_z$, \&$d\Omega$,
+  aim$_x$, aim$_y$, aim$_z$,$height, width)$ does the same as       randvec\_target\_circle but targetting at a rectangle with angular dimensions
+  $height$ and $width$ (in {\bf radians}, not in degrees as other angles).
 \end{itemize}
+
+\section{Reading a data file into a vector/matrix (Table input)}
+\index{Library!read\_table-lib (Read\_Table)|textbf}
+The \verb+read_table-lib+ provides functionalities for reading text (and binary) data files. To use this library, add a \verb+%include "read_table-lib"+ in your component definition DECLARE or SHARE section. Available functions are:
+
+\begin{itemize}
+\item {\bf Table\_Init}(\&$Table$) and {\bf Table\_Free}(\&$Table$) initialize and free allocated memory blocks
+\item {\bf Table\_Read}(\&$Table$, $filename$, $block$) reads numerical block number $block$ (0 for all) data from \emph{text} file $filename$ into $Table$. The block number changes when the numerical data changes its size, or a comment is encoutered (lines starting by '\verb+# ; % /+'). If the data could not be read, then $Table.data$ is NULL and $Table.rows = 0$. You may then try to read it using Table\_Read\_Offset\_Binary.
+\item {\bf Table\_Rebin}(\&$Table$) rebins $Table$ rows with increasing, evenly spaced first column (index 0), e.g. before using Table\_Value.
+\item {\bf Table\_Read\_Offset}(\&$Table$, $filename$, $block$, \&$offset$, $n_{rows}$) does the same as Table\_Read except that it starts at offset $offset$ (0 means begining of file) and reads $n_{rows}$ lines (0 for all). The $offset$ is returned as the final offset reached after reading the $n_{rows}$ lines.
+\item {\bf Table\_Read\_Offset\_Binary}(\&$Table$, $filename$, $type$, $block$, \&$offset$, $n_{rows}$, $n_{columns}$) does the same as Table\_Read\_Offset, but also specifies the $type$ of the file (may be "float" or "double"), the number $n_{rows}$ of rows to read, each of them having $n_{columns}$ elements. No header should be present.
+\item {\bf Table\_Info}$(Table)$ print information about the table $Table$.
+\item {\bf Table\_Index}($Table, m, n$) reads the $Table[m][n]$ element.
+\item {\bf Table\_Value}($Table, x, n$) looks for the closest $x$ value in the first column (index 0), and extracts in this row the $n$-th element. The first column is thus the 'x' axis for the data.
+\end{itemize}
+
+The format of text files is free. Lines starting by '\verb+#, ;, %, /+' characters are considered to be comments. Data blocks are vectors and matrices. Block numbers are counted starting from 1, and changing when a comment is found, or the column number changes. For instance, the file 'MCSTAS/data/BeO.trm' (Transmission of a Berylium filter) looks like:
+\begin{verbatim}
+  # BeO transmission, as measured on IN12
+  # Thickness: 0.05 [m]
+  # [ k(Angs-1) Transmission (0-1) ]
+  # wavevector multiply
+  1.0500  0.74441
+  1.0750  0.76727
+  1.1000  0.80680
+  ...
+\end{verbatim}
+Binary files should be of type "float" (i.e. REAL*32) and "double" (i.e. REAL*64), and should \emph{not} contain text header lines. These files are plateform dependent (little or big endian).
+
+The $filename$ is first searched into the current directory (and all user additional locations specified using the \verb+-I+ option, see section~\ref{s:files}), and if not found, in the \verb+data+ sub-directory of the \verb+MCSTAS+ library location. \index{Library!Components!data}
+\index{Environment variable!MCSTAS} This way, you do not need to have local copies of the \MCS\ Library Data files (see table~\ref{t:comp-data}).
+
+A usage example for this library part may be:
+\begin{verbatim}
+    t_Table rTable;       % declares a t_Table structure
+    char file="great.dat";% a file name
+    double x,y;
+    
+    Table_Init(&rTable);  % initialize the table to empty state
+    Table_Read(&rTable, file, 1); % reads the first numerical block
+    Table_Info(rTable);   % display table informations
+    ...
+    x = Table_Index(rTable, 2,5);  % reads the 3rd row, 5th column element 
+                                   % of the table. Indexes start at zero in C
+    y = Table_Value(rTable, 1.45,1);  % looks for value 1.45 in 1st column (x axis)
+                                      % and extract 2nd column value of that row
+    Table_Free(&rTable);  % free allocated memory for table
+    
+\end{verbatim}
+Additionally, if the block number (3rd) argument of  {\bf Table\_Read} is 0, all blocks will be catenated.
+The {\bf Table\_Value} function assumes that the 'x' axis is the first column (index 0).
+Other functions are used the same way with a few additional parameters, e.g. specifying an offset for reading files, or reading binary data.
+
+You may look into, for instance, the Monochromator\_curved component, or the Virtual\_input component for other implementation examples.
+
+\section{Monitor\_nD Library}
+\index{Library!monitor\_nd-lib}
+
+This library gathers a few functions used by a set of monitors e.g. Monitor\_nD, Res\_monitor, Virtual\_output, \ldots.
+It may monitor any kind of data, create the data files, and may display many geometries (for \verb+mcdisplay+).
+Refer to these components for implementation examples, and ask the authors for more details.
+
+\section{Adaptative sampling Library}
+\index{Library!adapt\_tree-lib}
+
+This library is currently only used by the components Source\_adapt and Adapt\_check. It performs adaptative sampling of neutrons for simulation efficiency optimization.
+Refer to this component for implementation examples, and ask the authors for more details.
+
+\section{Vitess import/export Library}
+\index{Library!vitess-lib}
+
+This library is used by Vitess\_input, Vitess\_output components, as well as the \verb+mcstas2vitess+ utility (see section~\ref{s:mcstas2vitess}). \index{Tools!mcstas2vitess}
+Refer to this component for implementation examples, and ask the authors for more details.
 
 \section{Constants for unit conversion etc.}
 The following predefined constants are useful for conversion
